Consumables first merge